--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,94 @@
-.App {
-  text-align: center;
+body {
+    font-size: 17px;
+    background-color: rgba(137, 180, 140, 0.55);
+    color: rgba(0, 0, 0, 0.74);
+    text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+h1 {
+    text-align: center;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+p {
+    margin: 0;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.wrapper {
+    max-width: 100%;
+    display: block;
 }
 
-.App-link {
-  color: #61dafb;
+.container {
+    max-width: 700px;
+    margin: 0 auto;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.btn {
+    padding: 7px 12px;
+    background-color: #3fb26f;
+    border-radius: 5px;
+    border: none;
+    transition: all .1s linear;
+    font-size: 20px;
+    color: white;
+    margin: 0 20px 0 0;
+}
+
+.btn:nth-child(3) {
+    margin-right: 0;
+}
+
+.btn:last-child{
+    margin-right: 0;
+}
+
+.delete-btn {
+    background-color: rgba(255, 0, 0, 0.56);
+    border: none;
+    border-radius: 5px;
+    color: #fff;
+    padding: 5px 10px;
+    transition: all .1s linear;
+    font-size: 18px;
+    font-weight: bold;
+}
+
+.delete-btn:hover {
+    background-color: rgb(255, 0, 0);
+    cursor: pointer;
+}
+
+.btn:hover {
+    background-color: rgba(101, 33, 238, 0.66);
+    color: #fff;
+    cursor: pointer;
+}
+
+.todo {
+    display: flex;
+    flex-direction: column;
+}
+
+.todo-container {
+    display: flex;
+    margin-bottom: 30px;
+    align-items: center;
+    justify-content: center;
+
+}
+
+.todo-item {
+    flex: 0 1 30%;
+    margin-right: 20px;
+    max-width: 300px;
+    background-color: rgba(71, 95, 241, 0.84);
+    color: white;
+    padding: 7px 10px;
+    border-radius: 5px;
+}
+
+.count {
+    font-size: 23px;
+    font-weight: bold;
+    margin: 10px 0 50px 0;
 }
